aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: codeflix
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: nginx-service
      protocol: TCP
      port: 80
      targetPort: 80
