aws/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: codeflix
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing

spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: nginx-service
      protocol: TCP
      port: 80
      targetPort: 80
